[package]
name = "klavier-helper"
version = "0.1.3-beta.11"
edition = "2021"
rust-version = "1.65"
description = "Helper library of klavier."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/klavier-helper"
homepage = "https://github.com/ruimo/klavier-helper"
repository = "https://github.com/ruimo/klavier-helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0"
tracing-subscriber = { version= "0", features = ["env-filter"]}
