[package]
name = "klavier-helper"
version = "0.1.4-beta.1"
edition = "2021"
rust-version = "1.65"
description = "Helper library of klavier."
license = "Apache-2.0"
documentation = "https://github.com/ruimo/klavier-helper"
homepage = "https://github.com/ruimo/klavier-helper"
repository = "https://github.com/ruimo/klavier-helper"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

